Rewrote one of the tests to allow for renabling on Windows.